# lumina-capture

./: .gitattributes  .gitignore  CMakeLists.txt  DESIGN.md  README.md  RELEASE_NOTES_v0.1.0.md  install-remote.ps1  install.ps1  package-release.ps1  uninstall.ps1
.github/workflows/: ci.yml  release.yml
src/: Config.cpp  Config.h  OverlayWindow.cpp  OverlayWindow.h  ScreenshotTool.rc  ToastWindow.cpp  ToastWindow.h  main.cpp  resource.h
